--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 header{
         height: 100px;
-        background-color: cornflowerblue;
 }nav{
         height: 60px;
-        background-color: coral;
 }main{
         height: 600px;
         width: 70%;
-        float: left;
-        background-color: darkcyan;
+        float: right;
 }aside{
         height: 600px;
-        width: 30%;
-        float: right;
-        background-color: bisque;
+        width: 25%;
+        float: left;
 }footer{
         height: 100px;
-        background-color: darkblue;
         color: white;
 }.content{
         height: 600px;
-        background-color: azure;
         float: none;
-}.button{
-        background-color: darkolivegreen;
-        color: whitesmoke;
+}.button a{
+        color: limegreen;
         margin: 20px;
         float: left;
+        
+}body {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
 }
