--- a/style.css
+++ b/style.css
@@ -1,49 +1,154 @@
 header{
     height: 100px;
-}nav{
+    background-color: white;
+    text-align: center;
+}
+
+nav{
     height: 60px;
-}main{
-    height: 600px;
+    width: 100%;
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+    text-align: center;
+}
+
+main{
+    height: 700px;
     width: 70%;
     float: right;
-}aside{
-    height: 600px;
-    width: 25%;
+    background-color: #EDD4A9;
+    align-content: right;
+}
+
+aside{
+    height: 700px;
+    width: 30%;
     float: left;
-}footer{
+    background-color: #EDD4A9;
+    font-weight: 400;
+    text-align: center;
+}
+
+footer{
     height: 100px;
-    color: white;
-}.content{
+    background-color: white;
+    text-align: center;
+    align-content: center;
+    font-size: 15px;
+}
+
+.content{
     height: 600px;
     float: none;
-}.button a{
-    color: limegreen;
+}
+
+.button a{
+    color: #4077d6;
     margin: 20px;
-    float: left;
-}body {
+    
+}
+
+body {
     padding: 25px;
     background-color: white;
-    color: black;
+    color: #3a3042;
     font-size: 25px;
-}.dark-mode {
-    background-color: black;
-    color: white;
-}table, th, td {
+    font-family: sans-serif;
+}
+
+table, th, td {
   border: 3px solid black;
   border-collapse: collapse;
 }
-th, td {
-  padding-top: 10px;
-  padding-bottom: 20px;
-  padding-left: 30px;
+
+th, td, tr{
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 40px;
   padding-right: 40px;
-}.animeTableImage {
+}
+
+.animeTableImage {
     height: 20%;
     width: 20%;
-}.tableText {
+}
+
+.tableText {
     float:right;
-}.licenseLinks {
-    color: limegreen;
-}::selection {
+}
+
+.licenseLinks {
+    color: #4077d6;
+}
+
+::selection {
   background-color: tan;
+}
+
+.nav_links {
+    list-style: none;
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+}
+
+.nav_links li {
+    display: inline-block;
+    padding: 0px 20px;
+    color: #4077d6;
+    font-weight: 900;
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+}
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+    text-decoration: none;
+    color: #4077d6;
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+}
+
+.nav_links li a:hover {
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+} 
+
+html,body {
+    margin:0;
+    padding:0;
+}
+
+ul,ol{
+  display: table;
+  margin: 0 auto;
+}
+
+.pageThreeMain{
+    font-size: 40px;
+}
+
+.pageTwoMain,.pageTwoAside {
+    height: 875px;
+}
+
+.pageTwoAside{
+    align-content: left;
+}
+
+.pageOneMain{
+    font-size: 23px;
+}
+
+.demonSlayer,.fullmetal,.silentVoice,.deathNote{   
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
